[u] Arrange tags to make main tags in top then optional tags are alphabetical [u] Moved notification files to common [u] Changed alert messages to notification popup [-] Removed unnecessary LOCs

--- a/frontend/src/components/common/NotificationPopup.css
+++ b/frontend/src/components/common/NotificationPopup.css
@@ -23,6 +23,10 @@
   pointer-events: auto;
 }
 
+.notification-popup.error {
+  background-color: #cb3443;
+}
+
 .notification-popup.visible {
   transform: translateX(0);
   opacity: 1;
