--- a/frontend/src/components/PrivacyPolicyPopup.css
+++ b/frontend/src/components/PrivacyPolicyPopup.css
@@ -33,7 +33,7 @@
   color: #569BC4;
   text-align: center;
   font-size: 2em;
-  margin: 0 0 20px 0;
+  margin: 0 0 0 0;
   padding-bottom: 15px;
   border-bottom: 2px solid #569BC4;
 }
