--- a/backend/templates/admin/master.html
+++ b/backend/templates/admin/master.html
@@ -67,6 +67,10 @@ body, html {
     transition: background-color 0.2s;
 }
 
+.navbar-nav .nav-item a.nav-link[href$="/admin/"] {
+    display: none !important;
+}
+
 .navbar .nav-item .nav-link:hover {
     background-color: rgba(255, 255, 255, 0.1);
     color: white !important;
