--- a/frontend/src/components/posts/TagFilter.css
+++ b/frontend/src/components/posts/TagFilter.css
@@ -5,7 +5,8 @@
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   margin-bottom: 15px;
   z-index: 900;
-  margin-top: 45px;
+  margin-top: 0px;
+  margin-left: 40px;
   position: relative;
 }
 
